--- a/style.css
+++ b/style.css
@@ -19,12 +19,13 @@ label {
 /* Styling Input Fields */
 #taskName, #targetValue {
     display: block;
-    width: 90%;
+    width: 70%;
     margin: 0.5em auto;
     padding: 0.5em;
     border-radius: 5px;
     border: none;
     height: 40px;
+    text-align: center;
     font-size: 16px;
 }
 
@@ -33,12 +34,14 @@ label {
     width: 70%;
     height: 20px;
     margin: 0.5em auto;
+    position: center;
+    top: -1px;
 }
 
 /* Styling Date Picker */
 #dateTime {
     display: block;
-    width: 90%;
+    width: 70%;
     margin: 0.5em auto;
     padding: 0.5em;
     border-radius: 5px;
