--- a/style.css
+++ b/style.css
@@ -19,14 +19,16 @@ label {
 /* Styling Input Fields */
 #taskName, #targetValue {
     display: block;
-    width: 70%;
-    margin: 0.5em auto;
-    padding: 0.5em;
-    border-radius: 5px;
-    border: none;
-    height: 40px;
+    box-sizing: border-box;
+    font-size: 14px;
+    width: 100%;
+    padding: 12px 20px;
+    margin: 15px 0;
+    border: 1px solid var(--tg-theme-link-color, #000);
+    background-color: var(--tg-theme-bg-color, #ffffff);
+    border-radius: 4px;
+    color: var(--tg-theme-text-color, #222222);
     text-align: center;
-    font-size: 16px;
 }
 
 /* Styling Checkboxes */
@@ -40,24 +42,32 @@ label {
 
 /* Styling Date Picker */
 #dateTime {
+    box-sizing: border-box;
+    width: 100%;
+    padding: 12px 20px;
+    margin: 15px 0;
+    border: 1px solid var(--tg-theme-link-color, #000);
+    background-color: var(--tg-theme-bg-color, #ffffff);
+    color: var(--tg-theme-text-color, #222222);
+    text-align: center;
     display: block;
-    width: 70%;
-    margin: 0.5em auto;
-    padding: 0.5em;
     border-radius: 5px;
-    border: none;
     height: 40px;
     font-size: 16px;
 }
 
 /* Styling Dropdown Lists */
 #frequency, #valueType {
+    box-sizing: border-box;
+    width: 100%;
+    padding: 12px 20px;
+    margin: 15px 0;
+    border: 1px solid var(--tg-theme-link-color, #000);
+    background-color: var(--tg-theme-bg-color, #ffffff);
+    border-radius: 4px;
+    color: var(--tg-theme-text-color, #222222);
+    text-align: center;
     display: block;
-    width: 90%;
-    margin: 0.5em auto;
-    padding: 0.5em;
-    border-radius: 5px;
-    border: none;
     height: 50px;
     font-size: 16px;
 }
