--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
-    --bg-color: var(--tg-theme-bg-color, #fff);
+    --bg-color: var(--tg-theme-secondary-bg-color, #fff);
     font-family: Arial, sans-serif;
     background-color: var(--bg-color);
-    color: var(--tg-theme-secondary-bg-color, #efefef);
+    color: var( --tg-theme-bg-color, #efefef);
     font-size: 14px;
     margin: 0;
     padding: 0;
@@ -25,7 +25,7 @@ label {
     padding: 12px 20px;
     margin: 15px 0;
     border: 1px solid var(--tg-theme-link-color, #000);
-    background-color: var(--tg-theme-secondary-bg-color, #ffffff);
+    background-color: var(--tg-theme-bg-color, #ffffff);
     border-radius: 4px;
     color: var(--tg-theme-text-color, #222222);
     text-align: center;
@@ -59,14 +59,14 @@ label {
 .container{
     max-width: 600px;
     margin: auto;
-    background-color: var(--tg-theme-secondary-bg-color, #0088cc);
+    background-color: var(--tg-theme-bg-color, #0088cc);
 }
 .taskCard{
     border-radius: 10px;
-    border: 1px solid  var(--tg-theme-bg-color, #222222);
+    border: 1px solid  var(--tg-theme-secondary-bg-color, #222222);
     padding: 20px;
     margin: 20px 0;
-    background-color: var(--tg-theme-bg-color, #222222);
+    background-color: var(--tg-theme-secondary-bg-color, #222222);
 }
 
 /* Styling Dropdown Lists */
@@ -76,7 +76,7 @@ label {
     padding: 12px 20px;
     margin: 15px 0;
     border: 1px solid var(--tg-theme-link-color, #000);
-    background-color: var(--tg-theme-secondary-bg-color, #ffffff);
+    background-color: var(--tg-theme-bg-color, #ffffff);
     border-radius: 4px;
     color: var(--tg-theme-text-color, #222222);
     text-align: center;
