--- a/style.css
+++ b/style.css
@@ -1,15 +1,11 @@
 body {
-    --bg-color: var(--tg-theme-secondary-bg-color, #fff);
+    --bg-color: var(--tg-theme-bg-color, #fff);
     font-family: Arial, sans-serif;
     background-color: var(--bg-color);
-    color: var( --tg-theme-bg-color, #efefef);
+    color: var(--tg-theme-secondary-bg-color, #efefef);
     font-size: 14px;
     margin: 0;
     padding: 0;
-    color-scheme: var(--tg-color-scheme);
-}
-body.gray {
-    background-color: var(--tg-theme-secondary-bg-color, #efefef);
 }
 /* Styling Labels */
 label {
@@ -25,7 +21,7 @@ label {
     padding: 12px 20px;
     margin: 15px 0;
     border: 1px solid var(--tg-theme-link-color, #000);
-    background-color: var(--tg-theme-bg-color, #ffffff);
+    background-color: var(--tg-theme-secondary-bg-color, #ffffff);
     border-radius: 4px;
     color: var(--tg-theme-text-color, #222222);
     text-align: center;
