--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ label {
     padding: 12px 20px;
     margin: 15px 0;
     border: 1px solid var(--tg-theme-link-color, #000);
-    background-color: var(--tg-theme-secondary-bg-color, #ffffff);
+    background-color: var(--tg-theme-bg-color, #ffffff);
     border-radius: 4px;
     color: var(--tg-theme-text-color, #222222);
     text-align: center;
@@ -43,7 +43,7 @@ label {
     padding: 12px 20px;
     margin: 15px 0;
     border: 1px solid var(--tg-theme-link-color, #000);
-    background-color: var(--tg-theme-secondary-bg-color, #ffffff);
+    background-color: var(--tg-theme-bg-color, #ffffff);
     color: var(--tg-theme-text-color, #222222);
     text-align: center;
     display: block;
