--- a/style.css
+++ b/style.css
@@ -29,8 +29,9 @@ label {
 
 /* Styling Checkboxes */
 #important, #repeat, #target {
-    width: 70%;
+    width: 40%;
     height: 20px;
+    display: inline-block;
     margin: 0.5em auto;
     position: center;
     top: -1px;
