--- a/style.css
+++ b/style.css
@@ -29,8 +29,8 @@ label {
 
 /* Styling Checkboxes */
 #important, #repeat, #target {
-    width: 40%;
-    height: 20px;
+   /* width: 40%;*/
+    height: 10px;
     display: inline-block;
     margin: 0.5em auto;
     position: center;
