--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ label {
 /* Styling Checkboxes */
 #important, #repeat, #target {
    /* width: 40%;*/
-    height: 40%;
+    height: 40px;
     display: inline-block;
     margin: 0.5em auto;
     position: center;
