--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 }
 /* Styling Labels */
 label {
-    color: var(--tg-theme-text-color, #222);
+    color: var(--tg-theme-text-color, #efefef);
 }
 
 /* Styling Input Fields */
@@ -29,7 +29,7 @@ label {
 
 /* Styling Checkboxes */
 #important, #repeat, #target {
-   /* width: 40%;*/
+    width: 40px;
     height: 40px;
     display: inline-block;
     margin: 0.5em auto;
