--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ label {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #ccc;
+    background-color: var(--tg-theme-secondary-bg-color, #ffffff);
     -webkit-transition: .4s;
     transition: .4s;
 }
