--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ label {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: var(--tg-theme-secondary-bg-color, #ffffff);
+    background-color: var(--tg-theme-secondary-bg-color, #000);
     -webkit-transition: .4s;
     transition: .4s;
 }
@@ -71,7 +71,7 @@ label {
     width: 26px;
     left: 4px;
     bottom: 4px;
-    background-color: white;
+    background-color: var(--tg-theme-secondary-bg-color, #000);
     -webkit-transition: .4s;
     transition: .4s;
 }
