--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ label {
     width: 26px;
     left: 4px;
     bottom: 4px;
-    background-color: var(--tg-theme-secondary-bg-color, #000);
+    background-color:  #ccc;
     -webkit-transition: .4s;
     transition: .4s;
 }
