--- a/style.css
+++ b/style.css
@@ -32,7 +32,8 @@ label {
     width: 40px;
     height: 40px;
     display: inline-block;
-    margin: 0.5em auto;
+
+    margin-right: 50px;
     position: center;
     top: -1px;
 }
@@ -40,7 +41,7 @@ label {
 .switch {
     position: relative;
     display: inline-block;
-    width: 60px;
+    width: 80px;
     height: 34px;
 }
 
@@ -85,9 +86,9 @@ input:focus + .slider {
 }
 
 input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
+
+    -ms-transform: translateX(44px);
+    transform: translateX(44px);
 }
 
 /* Rounded sliders */
