--- a/style.css
+++ b/style.css
@@ -28,12 +28,12 @@ label {
 }
 #addTime{
     border-radius: 50px;
-    background-color: var(--tg-theme-button-color, #000);
-    color: var(--tg-theme-button-text-color);
-    width: 40px;
-    height: 40px;
+    background-color: var(--tg-theme-button-color, #2196F3);
+    color: var(--tg-theme-button-text-color,#000);
+    width: 30px;
+    height: 30px;
     font-size: 30px;
-    text-align: center;
+
 }
 /* Styling Checkboxes */
 #important, #repeat, #target {
