--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ label {
 #addTime{
     border-radius: 50px;
     background-color: var(--tg-theme-button-color, #2196F3);
-    color: var(--tg-theme-button-text-color,#000);
+    color: var(--tg-theme-bg-color, #222222);
     width: 30px;
     height: 30px;
     font-size: 30px;
