--- a/style.css
+++ b/style.css
@@ -28,12 +28,13 @@ label {
 }
 #addTime{
     display: block;
-    border-radius: 50px;
+    border-radius: 5px;
     background-color: var(--tg-theme-button-color, #2196F3);
-    color: var(--tg-theme-bg-color, #222222);
-    width: 35px;
-    height: 35px;
-    font-size: 30px;
+    color: var(--tg-theme-button-text-color, #ffffff);
+    width: 100%;
+    height: 30px;
+    font-size: 14px;
+    text-align: center;
 }
 /* Styling Checkboxes */
 #important, #repeat, #target {
